# ESP32-RID

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/rid_config/: CMakeLists.txt  config.cpp  nvs_store.cpp
components/rid_gb/: CMakeLists.txt  gb_encoder.cpp
components/rid_identity/: CMakeLists.txt  identity.cpp
components/rid_model/: CMakeLists.txt  model.cpp
components/rid_odid/: CMakeLists.txt  odid_encoder.cpp
components/rid_odid/include/rid/: odid_encoder.hpp
components/rid_radio/: CMakeLists.txt  ble_transport.cpp  radio_coordinator.cpp  wifi_transport.cpp
components/rid_runtime/: CMakeLists.txt  runtime.cpp
components/rid_scheduler/: CMakeLists.txt  scheduler.cpp
components/rid_shell/: CMakeLists.txt  shell.cpp
components/rid_trajectory/: CMakeLists.txt  trajectory.cpp
docs/: authorized-test-site-notice.md  build-flash.md  configuration-reference.md  shell-reference.md
docs/hardware/: setup.md
docs/protocol/: gb46750-mapping.md  opendroneid-mapping.md  transport-matrix.md
docs/verification/: acceptance-procedure.md  acceptance-report.md  radio-feasibility.md
main/: CMakeLists.txt  app_main.cpp
pytest_rid/: receiver_log.py  test_acceptance.py  test_radio_probe.py  test_receiver_log.py
test_apps/integration/: CMakeLists.txt  sdkconfig.defaults
test_apps/integration/main/: CMakeLists.txt  test_ble_transport.cpp  test_main.cpp  test_nvs_store.cpp  test_wifi_transport.cpp
test_apps/logic/: CMakeLists.txt  sdkconfig.defaults
test_apps/logic/main/: CMakeLists.txt  test_config.cpp  test_gb_encoder.cpp  test_model_identity.cpp  test_odid_encoder.cpp  test_runtime.cpp  test_scheduler.cpp  test_shell.cpp  test_smoke.cpp  test_trajectory.cpp
test_apps/radio_probe/: CMakeLists.txt  sdkconfig.defaults
(+17 files in other folders)
